syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";

service CPG {
  rpc ListAssets(google.protobuf.Empty) returns (ListAssetsResponse);
  rpc CreateInvoice(CreateInvoiceRequest) returns (CreateInvoiceResponse);
  rpc GetInvoice(GetInvoiceRequest) returns (GetInvoiceResponse);
  rpc CheckWallet(CheckWalletRequest) returns (google.protobuf.Empty);
  rpc Checkout(CheckoutRequest) returns (google.protobuf.Empty);
}
message CheckoutRequest{
  string invoiceId = 1;
  string asset = 2;
}
message CheckWalletRequest {
  string walletAddress = 1;
  string asset = 2;
}
message ListAssetsResponse {
  message Asset {
    string title = 1;
    google.protobuf.Duration delay = 2;
  }
  map<string,Asset> assets = 1;
}

message CreateInvoiceRequest {
  string asset = 1;
  string recipient = 2;
  string amount = 3;
}

message CreateInvoiceResponse {
  string uuid = 1;
}

message GetInvoiceRequest {
  string uuid = 1;
}

message GetInvoiceResponse{
  CreateInvoiceRequest request = 1;
  string status = 2;
  string walletAddress = 3;
}


